2003-07-02 Christian Bayle	<bayle@debian.org>
	* Corrected bad colspan in www/people/people_utils.php close patch
	#482 from Paul Gibbbs (djpaul)
	
2003-07-02 Christian Bayle	<bayle@debian.org>
	* common/include/account.php
	Check if the unix user account exist with a exec(getent...) and refuse
	to create if exists
	
2003-06-23 Tom Copeland  <tom@infoether.com>

	* www/project/stats_graph.php:
	Fixed bug that I introduced into graphs - y axis data was backwards.
	
2003-06-19 Tom Copeland  <tom@infoether.com>

	* www/stats/lastlogins.php:
	Spruced up lastlogins a bit; made it look more like everything else.
	
2003-06-17 Christian Bayle	<bayle@debian.org>

	* Applied patch #395 and #394 for groupisactivecheckboxpost
	and groupisactivecheckbox hooks
	* Applied patch #407 Tab problem: To Solve Bug #396 thanks to
	Francisco Gimeno

2003-06-17 Tom Copeland  <tom@infoether.com>

	* www/project/stats_graph.php:
	Graphs occasionally had wrong dates along the xaxis; this
	was happening because the SQL statement had an offset 
	of 23 which wasn't working for months that don't have 30 
	days.  I think.
	* www/include/user_home.php:
	Fixed bug #380: users.{sys_default_domain} hardcoded and 
	ignores users_host in gforge.conf
	
2003-06-13 Tom Copeland  <tom@infoether.com>

	* www/admin/index.php:
	Added a link to the "recent logins" page.
	
2003-06-13 Christian Bayle	<bayle@debian.org>

	* Added Patch #307 Ronald Petty cvs browser as an alternate cvs browser
	* Added Patch #317 Dracos Moinescu cvs browser as an alternate cvs browser
	* Applied Patch #389 Hidenari Miwa & Tsutomu Tominaga Email i18n patch
	this is a tricky patch, I hope won't break everything in mail sending
	rather untested
	* Applied Patch #388 Speed-ups to www/my/index.php thanks to Jeff Fynboh
	yet another trick patch.

2003-06-09  Roland Mas  <99.roland.mas@aist.enst.fr>

	* common/include/Group.class: Send a different project submission
	email to the submitter and the site admins.  Submitter was sent a